src/objects/Apttus_Config2__AccountBillingSummary__c.object
<CustomObject>
    <description>Represents the billing summary for an account</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <description>ID of the account associated with the billing summary</description>
        <inlineHelpText>ID of the account associated with the billing summary</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BillingSummary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AnnualRecurringBillingsRamped__c</fullName>
        <description>The total of  all recurring billings from the end of the contract and back for 12 months</description>
        <inlineHelpText>The total of  all recurring billings from the end of the contract and back for 12 months</inlineHelpText>
        <label>Annual Recurring Billings (Ramped)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AnnualRecurringBillingsToday__c</fullName>
        <description>The toal of all recurring billings from today and back for 12 months</description>
        <inlineHelpText>The toal of all recurring billings from today and back for 12 months</inlineHelpText>
        <label>Annual Recurring Billings (Today)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BilledAmount__c</fullName>
        <description>The amount billed for the account</description>
        <inlineHelpText>The amount billed for the account</inlineHelpText>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceBalance__c</fullName>
        <description>The invoice balance for the account</description>
        <inlineHelpText>The invoice balance for the account</inlineHelpText>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsUpToDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the summary object is up to date</description>
        <inlineHelpText>Indicates whether the summary object is up to date</inlineHelpText>
        <label>Is UpTo Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastCalculated__c</fullName>
        <description>This is the point in time when the Account Billing Summary was fully calculated. This happens when one or more of the contributing Billing objects (Invoices, Schedules, etc.) have changed and the change is detected by the Account Billing Summary batch job.</description>
        <inlineHelpText>This is the point in time when the Account Billing Summary was fully calculated. This happens when one or more of the contributing Billing objects (Invoices, Schedules, etc.) have changed and the change is detected by the Account Billing Summary batch job</inlineHelpText>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastInvoiceDate__c</fullName>
        <description>The last invoice date for the account</description>
        <inlineHelpText>The last invoice date for the account</inlineHelpText>
        <label>Last Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MiscInvoiceAmount__c</fullName>
        <description>The total of all miscellaneous charges that are invoiced</description>
        <inlineHelpText>The total of all miscellaneous charges that are invoiced</inlineHelpText>
        <label>Misc Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextInvoiceDate__c</fullName>
        <description>The next invoice date for the account</description>
        <inlineHelpText>The next invoice date for the account</inlineHelpText>
        <label>Next Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OneTimeInvoiceAmount__c</fullName>
        <description>The total of all one time charges that are invoiced</description>
        <inlineHelpText>The total of all one time charges that are invoiced</inlineHelpText>
        <label>One-Time Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaidAmount__c</fullName>
        <description>The total amount of paid invoices</description>
        <inlineHelpText>The total amount of paid invoices</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecurringInvoiceAmount__c</fullName>
        <description>The total of all recurring charges that are invoiced</description>
        <inlineHelpText>The total of all recurring charges that are invoiced</inlineHelpText>
        <label>Recurring Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalContractValue__c</fullName>
        <description>The total contract value for the account</description>
        <inlineHelpText>The total contract value for the account</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalInvoiceAmount__c</fullName>
        <description>The total of all charges that are invoiced</description>
        <inlineHelpText>The total of all charges that are invoiced</inlineHelpText>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnbilledAmount__c</fullName>
        <description>The amount unbilled for the account</description>
        <inlineHelpText>The amount unbilled for the account</inlineHelpText>
        <label>Unbilled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnpaidAmount__c</fullName>
        <description>The total amount of unpaid invoices</description>
        <inlineHelpText>The total amount of unpaid invoices</inlineHelpText>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UsageInvoiceAmount__c</fullName>
        <description>The total of all usage charges that are invoiced</description>
        <inlineHelpText>The total of all usage charges that are invoiced</inlineHelpText>
        <label>Usage Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Account Billing Summary</label>
    <nameField>
        <displayFormat>BS-{000000}</displayFormat>
        <label>Billing Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Billing Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>